--- a/app.yaml
+++ b/app.yaml
@@ -1,3 +1,5 @@
+application: radhaswami-209020
+version: 20180703t032215
 runtime: python27
 api_version: 1
 threadsafe: false
@@ -149,7 +151,11 @@ skip_files:
 - tests/
 - scripts/
 - integrations/
+- extensions/rich_text_components/
 - integrations_dev/
+- core/templates/
+- core/tests/
+- assets/images/
 # Some third_party static scripts are directly imported, namely: jquery,
 # jqueryui, angularjs, jqueryui-touch-punch, MathJax, code-mirror,
 # ui-codemirror, d3js, midi-js, ui-map, guppy, skulpt, math-expressions.
@@ -166,3 +172,48 @@ skip_files:
 - third_party/static/perfectscrollbar-0.6.16
 - third_party/static/textAngular-1.4.5
 - third_party/static/widget
+- third_party/static/MathJax-2.6.0/docs
+- third_party/static/MathJax-2.6.0/localization/ast
+- third_party/static/MathJax-2.6.0/localization/bcc
+- third_party/static/MathJax-2.6.0/localization/bg
+- third_party/static/MathJax-2.6.0/localization/br
+- third_party/static/MathJax-2.6.0/localization/ca
+- third_party/static/MathJax-2.6.0/localization/cdo
+- third_party/static/MathJax-2.6.0/localization/cs
+- third_party/static/MathJax-2.6.0/localization/cy
+- third_party/static/MathJax-2.6.0/localization/da
+- third_party/static/MathJax-2.6.0/localization/de
+- third_party/static/MathJax-2.6.0/localization/eo
+- third_party/static/MathJax-2.6.0/localization/es
+- third_party/static/MathJax-2.6.0/localization/fa
+- third_party/static/MathJax-2.6.0/localization/fi
+- third_party/static/MathJax-2.6.0/localization/fr
+- third_party/static/MathJax-2.6.0/localization/gl
+- third_party/static/MathJax-2.6.0/localization/he
+- third_party/static/MathJax-2.6.0/localization/ia
+- third_party/static/MathJax-2.6.0/localization/it
+- third_party/static/MathJax-2.6.0/localization/ja
+- third_party/static/MathJax-2.6.0/localization/kn
+- third_party/static/MathJax-2.6.0/localization/ko
+- third_party/static/MathJax-2.6.0/localization/lb
+- third_party/static/MathJax-2.6.0/localization/lki
+- third_party/static/MathJax-2.6.0/localization/lt
+- third_party/static/MathJax-2.6.0/localization/mk
+- third_party/static/MathJax-2.6.0/localization/nl
+- third_party/static/MathJax-2.6.0/localization/oc
+- third_party/static/MathJax-2.6.0/localization/pl
+- third_party/static/MathJax-2.6.0/localization/pt
+- third_party/static/MathJax-2.6.0/localization/pt-br
+- third_party/static/MathJax-2.6.0/localization/qqq
+- third_party/static/MathJax-2.6.0/localization/ru
+- third_party/static/MathJax-2.6.0/localization/scn
+- third_party/static/MathJax-2.6.0/localization/sco
+- third_party/static/MathJax-2.6.0/localization/sl
+- third_party/static/MathJax-2.6.0/localization/sv
+- third_party/static/MathJax-2.6.0/localization/tr
+- third_party/static/MathJax-2.6.0/localization/uk
+- third_party/static/MathJax-2.6.0/localization/vi
+- third_party/static/MathJax-2.6.0/localization/zh-hans
+- third_party/static/MathJax-2.6.0/test
+- third_party/static/guppy-b5055b/site
+- third_party/static/guppy-b5055b/test
